...
                    android:layout_marginTop="@dimen/list_item_padding"
                    android:layout_marginBottom="@dimen/list_item_padding"
                    android:layout_marginLeft="@dimen/list_item_padding"
                    android:layout_marginStart="@dimen/list_item_padding"
                    app:cardElevation="4dp">
                    <ImageView
                        android:id="@+id/book_image_view"
                        android:layout_width="60dp"
                        android:layout_height="80dp"
                        app:imageUrl="@{book.image}"
                        android:scaleType="centerCrop"/>
                </com.google.android.material.card.MaterialCardView>

...
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

            <ImageButton
                android:id="@+id/open_url_button"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/list_item_padding"
...
