<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_newbook"
        android:icon="@drawable/ic_baseline_auto_stories_24"
        android:title="@string/title_newbook" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_bookmark"
        android:icon="@drawable/ic_baseline_bookmarks_24"
        android:title="@string/title_bookmark" />

</menu>