<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.widget.CompoundButton" />

        <import type="android.view.View" />

        <variable
            name="book"
            type="com.gunu.mylib.domain.model.Book" />

        <variable
            name="viewModel"
            type="com.gunu.mylib.ui.BookOpenViewModel" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="@dimen/list_item_padding"
        android:layout_marginStart="@dimen/list_item_padding"
        android:layout_marginRight="@dimen/list_item_padding"
        android:layout_marginEnd="@dimen/list_item_padding"
        app:cardCornerRadius="4dp">
        <LinearLayout
            android:id="@+id/book_open_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/list_item_padding"
            android:paddingBottom="@dimen/list_item_padding"
            android:paddingLeft="@dimen/list_item_padding"
            android:paddingRight="@dimen/list_item_padding"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/bookmark_toggle_button"
                android:layout_width="30dp"
                android:layout_height="36dp"
                android:textOff=""
                android:textOn=""
                android:background="@drawable/selector_bookmark"
                style="@style/MyLib.SmallImage"
                android:checked="@{book.bookmarked}"
                android:onClick="@{(view) -> viewModel.updateBookmark(book, ((CompoundButton)view).isChecked())}"
                android:layout_gravity="center_vertical"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.openDetailBook(book)}"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/book_image_view"
                    android:layout_width="60dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_vertical"
                    app:imageUrl="@{book.image}"
                    android:scaleType="centerCrop"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical">
                    <TextView
                        android:id="@+id/title_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:layout_marginLeft="@dimen/list_item_padding"
                        android:layout_marginStart="@dimen/list_item_padding"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:text="@{book.title}"
                        android:fontFamily="@font/poppins_bold"
                        android:maxLines="1"
                        android:ellipsize="end"/>

                    <TextView
                        android:id="@+id/subtitle_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/title_text_view"
                        app:layout_constraintLeft_toLeftOf="@id/title_text_view"
                        android:layout_marginTop="4dp"
                        android:layout_marginLeft="@dimen/list_item_padding"
                        android:layout_marginStart="@dimen/list_item_padding"
                        android:paddingBottom="4dp"
                        android:fontFamily="@font/poppins"
                        android:visibility="@{book.subtitle.empty ? View.GONE : View.VISIBLE}"
                        android:text="@{book.subtitle}"
                        android:maxLines="1"
                        android:ellipsize="end"/>

                    <TextView
                        android:id="@+id/isbn_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/subtitle_text_view"
                        app:layout_constraintLeft_toLeftOf="@id/title_text_view"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:fontFamily="@font/poppins_light"
                        android:text="@{book.isbnString}"
                        android:maxLines="1"/>

                    <TextView
                        android:id="@+id/price_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="@id/isbn_text_view"
                        app:layout_constraintLeft_toRightOf="@id/isbn_text_view"
                        app:layout_constraintBottom_toBottomOf="@id/isbn_text_view"
                        android:layout_marginLeft="@dimen/list_item_padding"
                        android:fontFamily="@font/poppins_light"
                        android:layout_marginStart="@dimen/list_item_padding"
                        android:text="@{book.price}"
                        android:maxLines="1"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

            <ImageButton
                android:id="@+id/open_url_button"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:background="@drawable/ic_baseline_launch_24"
                style="@style/MyLib.SmallImage"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</layout>
